<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dr. Code!</string>
    <string name="command_label">Command\nBlocks</string>
    <string name="menu_settings">Settings</string>
    <string name="conditional_label">Conditional\nBlocks</string>
    <string name="welcome_string">Welcome to the School of Technological Medicine!</string>
    <string name="next_world">Next World</string>
    <string name="previous_world">Previous World</string>
    
    <string name="move_foreward">Move Foreward</string>
    <string name="move_right">Move East</string>
    <string name="move_up">Move North</string>
    <string name="move_down">Move South</string>
    <string name="move_left">Move West</string>
    <string name="front_touching">Front Touching</string>
    <string name="back_touching">Back Touching</string>
    <string name="left_touching">Left Touching</string>
    <string name="right_touching">Right Touching</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="shoot">Shoot</string>
	<string name="enemies_dead">Enemies Dead</string>
	
	<string name="cheat1">Unlock all tutorial levels</string>
	<string name="cheat2">Enable rave mode</string>
	<string name="cheat3">Unlock all spine levels</string>
	
	<string name="delete">Delete Selected Block</string>
	<string name="delete_all">Delete All Blocks</string>
	<string name="run">Run!</string>
	<string name="run_noblocks">View Map</string>
	
	<string name="creds1">Devan Cakebread</string>
	<string name="creds1s">Project Overseer, Beta Tester, Level Designer</string>
	<string name="creds2">William Papsco</string>
	<string name="creds2s">Lead Programmer</string>
	<string name="creds3">Cameron Ellis</string>
	<string name="creds3s">Artist, Beta Tester, House-Elf.</string>
	<string name="creds4">Duncan Millard</string>
	<string name="creds4s">Beta Tester, Consultant</string>
	<string name="creds5">Ashlynne Olsen</string>
	<string name="creds5s">Lead Artist</string>
	<string name="creds6">Killiam Heindrics</string>
	<string name="creds6s">Audio Development, Artist, Beta Tester, Junior Sub-Committee on Foreign Relations President’s Aide-de-Camp, Credits</string>
	<string name="creds7">Stack Overflow</string>
	<string name="creds7s">Lead Programming Consultant</string>
	<string name="creds8">Chris Bartlo</string>
	<string name="creds8s">Consultant, Teacher, Mentor, Senior Senior Overseer, Beta Tester, Wizard, Master, Unconfirmed Hobbit</string>
	<string name="creds9">James Waugh</string>
	<string name="creds9s">Senior Manager of Slacking, Goofing, and Messing Around Services, LLD</string>
	<string name="creds10">Austin Grahm</string>
	<string name="creds10s">Artist, Beta Tester, Tallest</string>
	
	<string name="achievement_title">Achievements</string>
	<string name="locked_cheevo">"???"</string>
	<string name="cheevo1t">From Humble Beginings</string>
	<string name="cheevo2t">Studying Hard</string>
	<string name="cheevo3t">Getting Bored</string>
	<string name="cheevo4t">That Took a While</string>
	<string name="cheevo5t">"Hey! That's Not Fair!"</string>
	<string name="cheevo6t">"Über Pro!"</string>
	<string name="cheevo1d">Complete the first level</string>
	<string name="cheevo2d">Complete the second level</string>
	<string name="cheevo3d">Complete the third level</string>
	<string name="cheevo4d">Complete a level using at least 20 blocks</string>
	<string name="cheevo5d">Use a cheat</string>
	<string name="cheevo6d">Complete any three levels under par</string>
	
    
</resources>